--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,19 @@
 @use "@/style/typography";
+@use "@/style/_colors";
 
 body {
   margin: 0
+}
+
+button {
+  height: 50px;
+  width: fit-content;
+  border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  padding: 8px 16px;
+  color: white;
+  background-color: colors.$primary;
+  font-weight: bold;
+  cursor: pointer
 }
