--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -8,6 +8,16 @@ body {
   font-family: 'PT Sans', Helvetica, sans;
 }
 
+.body1 {
+  font-size: 18px;
+  letter-spacing: 0.5px;
+}
+
+.caption {
+  font-size: 14px;
+  letter-spacing: 0.4px;
+}
+
 .h5 {
   margin: 0;
   font-size: 24px;
